# yifangmoyan

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LESSONS_LEARNED.md  PRODUCT_DESIGN.md  PROJECT_PLAN.md  README.md  package-lock.json  买卖点审查文档.md  威科夫审查文档.md
.github/workflows/: build-windows.yml
crates/czsc/: Cargo.toml
crates/czsc/src/: analyzer.rs  beichi.rs  bi.rs  buy_sell.rs  fenxing.rs  include.rs  lib.rs  qujian_tao.rs  xd.rs  zoushi.rs  zs.rs
crates/czsc/tests/: 688008_analysis.md  diag_600519.rs  diag_688008.rs  diag_688008_full.rs
crates/data/: Cargo.toml
crates/data/examples/: test_board_fetch.rs  test_source_fallback.rs
crates/data/src/: kline_manager.rs  lib.rs  source.rs  sync.rs  types.rs
crates/data/tests/: integration_test.rs
crates/indicator/: Cargo.toml
crates/indicator/src/: lib.rs  macd.rs  volume.rs
crates/wyckoff/: Cargo.toml
crates/wyckoff/src/: analyzer.rs  annotation.rs  effort.rs  lib.rs  pattern.rs  phase.rs  supply_demand.rs  trading_range.rs  types.rs
docs/: 缠论三类买卖点原文与实现对照.md  缠论背驰定义与实现对照.md  背驰审查文档.md  融合信号解读.md
releases/: latest.json
scripts/: download_kline.py  release.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  fusion.rs  lib.rs  main.rs  state.rs
src-tauri/tests/: e2e_test.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.vue  style.css
src-ui/src/components/: ChartToolbar.vue  DataSyncPanel.vue  SettingsPanel.vue  SignalPanel.vue  StockSearch.vue  WatchlistPanel.vue
src-ui/src/composables/: useApi.ts  useStorage.ts
src-ui/src/types/: index.ts
