[package]
name = "yifang-data"
version = "0.1.0"
edition = "2021"
description = "墨岩K线分析 - 数据层"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
polars = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6"
pinyin = "0.11"
